[gd_scene load_steps=11 format=2]

[ext_resource path="res://Image/tekgame_Bg1024x768.png" type="Texture" id=2]
[ext_resource path="res://Scene/tek_abc3dz_Ichuen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/tek_abc3dz_Speng.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/tek_abc3dz_Olay.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/tek_abc3dz_Mno.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sound/bgm_tekgame.ogg" type="AudioStream" id=7]
[ext_resource path="res://Scene/Main.gd" type="Script" id=8]
[ext_resource path="res://Font/Unique.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 9 )

[node name="Main" type="Node2D"]
script = ExtResource( 8 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 376.53, 666.808 )
scale = Vector2( 0.73541, 1.7312 )
texture = ExtResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 116.436, 759.734 )
stream = ExtResource( 7 )
volume_db = 0.2
autoplay = true

[node name="Tek_abc3dz_mno" parent="." instance=ExtResource( 6 )]
position = Vector2( 22.2075, 83.2781 )

[node name="Tek_abc3dz_olay" parent="." instance=ExtResource( 5 )]
position = Vector2( 25.9087, 175.809 )

[node name="Tek_abc3dz_ichuen" parent="." instance=ExtResource( 3 )]
position = Vector2( 29.61, 270.191 )

[node name="Tek_abc3dz_speng" parent="." instance=ExtResource( 4 )]
position = Vector2( 27.7594, 370.125 )

[node name="DTLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 334.314
margin_top = 919.569
margin_right = 384.314
margin_bottom = 943.569
custom_fonts/font = SubResource( 2 )
text = "Time :"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 190.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickOlay" type="Label" parent="VBoxContainer"]
margin_right = 190.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.00390625, 0.1362, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Olay#Drum : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickMno" type="Label" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 190.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.789062, 0.442692, 0.0739746, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Mno#Bass : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickSpeng" type="Label" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 190.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.960938, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Speng#Guitar : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickIchuen" type="Label" parent="VBoxContainer"]
margin_top = 93.0
margin_right = 190.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.203125, 0.203125, 0.203125, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Ichuen#Turntable : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickT" type="Label" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 190.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.921875, 0.129639, 0.129639, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Total : 0"
__meta__ = {
"_edit_use_anchors_": false
}
